Update to Spigot 26.2 API and clean up source
- Bump spigot-api to 26.2-R0.1-SNAPSHOT and target Java 21
- Set plugin.yml api-version to 1.21
- Fix command name case mismatch and null-guard command registration
- Drop redundant CommandExecutor, dead return statements, and verbose collection construction